# gdbus-learn

./: .gitignore  CMakeLists.txt  README.md
ClientProject/: CMakeLists.txt
ClientProject/Include/client/: TrainingClient.hpp
ClientProject/Sources/client/: TrainingClient.cpp
ClientProject/app/: client_main.cpp
ClientProject/tests/: client_wrapper_smoke.cpp  concurrent_file_transfer_smoke.cpp  download_file_smoke.cpp  download_missing_file_smoke.cpp  download_overwrite_smoke.cpp  file_transfer_smoke.cpp  inheritable_client_smoke.cpp  send_file_once.cpp  training_library_api_types.cpp  upload_timeout_recovery_smoke.cpp
Common/: CMakeLists.txt
Common/Include/public/: DbusConstants.hpp  ITestListener.hpp  ITestService.hpp  TrainingLibraryApi.hpp
Common/Include/utils/: ContractSerializer.hpp  DbusRuntime.hpp  FileTransferUtils.hpp  GLibWrappers.hpp  ScopedBusConnection.hpp  ScopedBusNameOwner.hpp  ScopedExportedInterface.hpp
Common/Interfaces/: com.example.Training.xml
Common/Sources/utils/: ScopedBusConnection.cpp  ScopedBusNameOwner.cpp  ScopedExportedInterface.cpp
ServiceProject/: CMakeLists.txt
ServiceProject/Include/: TrainingService.hpp  TrainingState.hpp
ServiceProject/Include/training/: TrainingLibrary.hpp
ServiceProject/Sources/: TrainingService.cpp  TrainingState.cpp
ServiceProject/Sources/training/: TrainingLibrary.cpp
ServiceProject/app/: CMakeLists.txt  service_main.cpp
deploy/dbus/: com.example.Training.conf
deploy/systemd/: training.service.in
docs/: file-transfer-defense-qa.md
